Fix Layout of NavHeader changing if ChatPopup visible and hidden

--- a/src/Pages/Navigation/NavHeader.css
+++ b/src/Pages/Navigation/NavHeader.css
@@ -20,6 +20,7 @@ body{
     padding: 1em;
     justify-content: space-between;
     align-items: stretch;
+    z-index: 1;
 }
 
 .NavigatorRightHeader{
